# vision-os

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  app.py  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
common/: __init__.py  config.py  interfaces.py  models.py  policy.py  profile.py
context/: __init__.py  rules.py
decision/: __init__.py  engine.py
demo/: demo-benchmark.json  demo-history.jsonl  demo-replay.jsonl  demo-session-summary.json  demo-setup-config.yaml  sample-integrations.yaml  sample-profile.yaml  sample-triggers.yaml  sample-zones.yaml
docs/: benchmark-output.md  easy-setup.md  integrations.md  session-history.md
events/: __init__.py  emitter.py  models.py  reducer.py
explain/: __init__.py  explain.py
features/: builder.py
integrations/: __init__.py  config.py  dispatcher.py  engine.py  models.py  mqtt.py  publisher.py
perception/: __init__.py  detector.py
policies/: __init__.py  default.yaml  home.yaml  office.yaml
profiles/: __init__.py  lab_bench.yaml  meeting_room.yaml  study_room.yaml  waiting_area.yaml  workstation.yaml
runtime/: __init__.py  benchmark.py  history.py  io.py  pipeline.py
server/: __init__.py  controller.py  editors.py  launchpad.py  models.py  runtime_host.py  store.py  web.py
setupux/: __init__.py  config_file.py  models.py  summary.py  validate.py  wizard.py
state/: __init__.py  actor_store.py  memory.py
telemetry/: health.py  logging.py  timers.py
tests/: test_app.py  test_app_history.py  test_app_integration_smoke.py  test_app_integrations.py  test_app_profiles.py  (+57 more)
(+32 files in other folders)
