[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vision-os"
version = "0.3.0"
description = "Real-time scene understanding with OpenCV and Ultralytics YOLO."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "akhilkinnera01" }
]
dependencies = [
  "numpy>=1.26.0",
  "opencv-python>=4.9.0",
  "PyYAML>=6.0",
  "ultralytics>=8.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[tool.setuptools.packages.find]
include = [
  "common",
  "common.*",
  "perception",
  "perception.*",
  "features",
  "features.*",
  "context",
  "context.*",
  "decision",
  "decision.*",
  "explain",
  "explain.*",
  "ui",
  "ui.*",
  "runtime",
  "runtime.*",
  "integrations",
  "integrations.*",
  "state",
  "state.*",
  "tracking",
  "tracking.*",
  "zones",
  "zones.*",
  "events",
  "events.*",
  "telemetry",
  "telemetry.*",
  "policies",
  "policies.*",
  "profiles",
  "profiles.*",
  "setupux",
  "setupux.*",
  "server",
  "server.*",
]

[tool.setuptools.package-data]
policies = ["*.yaml"]
profiles = ["*.yaml", "triggers/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
